docs/version-1.30/modules/en/pages/howtos/workarounds/policy-server-certificate-expiry.adoc
include::partial$variables.adoc[]
= Policy Server certificate rotation issue for release ≤ v1.16.0
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-11-04
:page-revdate: {revdate}
:description: How-to work around Policy Server certificate expiry issue
:doc-persona: ["kubewarden-operator", "kubewarden-distributor", "kubewarden-integrator"]
:doc-topic: ["howto", "workarounds", "policy server certificates"]
:doc-type: ["howto"]
:keywords: ["{project-name}", "kubewarden", "kubernetes", "policy server certificates"]
:sidebar_label: Certificate Rotation
:sidebar_position: 10
:current-version: {page-origin-branch}

[IMPORTANT]
.Workaround for {project-name} v1.16.0 and earlier
====

This workaround is only needed for {short-project-name} v1.16.0 and earlier.
Starting from v1.17.0, the controller automatically renews the policy server
certificates.

====

During the release process for v1.14, the {short-project-name} discovered a bug
related to the policy server certificate rotation. The Root CA configuration is
for 10-year expiry, but each policy-server certificate secret has a one-year
expiry. However, the controller is currently unable to renew them
automatically.

In the v1.14 release, the {short-project-name} ensured that policy-server
secrets are created with a 10-year expiry.

An automated renewal process is in place for release ≥ v1.16.0.

Until then, users can manually delete the expired certificate secret
(policy-server-default) and trigger a controller reconciliation. You do this by
adding, removing, or updating a policy or by adjusting the number of replicas
of a PolicyServer.
